# rust_chat

./: Cargo.toml  README.md  index.html  style.css
client/: Cargo.toml  index.html
client/src/: main.rs
client/src/components/: chat.rs
client/src/services/: websocket.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
templates/: received_message.html  sent_message.html  system_message.html
