[package]
name = "leptos-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
leptos = { version = "0.5.2", features = ["csr"] }
leptos_router = "0.5.2"
reqwasm = "0.5.0"
serde = "1.0.192"
serde_json = "1.0.108"
wasm-bindgen-futures = "0.4.38"
